fixed skills section animation trigger on mobile and desktop

--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ p {
   max-width: 100rem; }
 
 .section {
-  padding: 6rem 2rem 7rem;
+  padding: 6rem 2rem 6rem;
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -537,7 +537,7 @@ footer {
       height: 6.1rem;
       width: 6.5rem; }
 
-#create-section {
+#strengths-section {
   padding-bottom: 4rem; }
 
 .strengths__row {
@@ -592,7 +592,7 @@ footer {
   background-color: #f5f5f5; }
   @media screen and (max-width: 599px) {
     #projects-section {
-      padding-bottom: 4rem; } }
+      padding-bottom: 5rem; } }
 
 .project {
   width: 100%; }
