--- a/scss/base/_main.scss
+++ b/scss/base/_main.scss
@@ -28,7 +28,7 @@ p {
 }
 
 .section {
-    padding: 6rem 2rem 7rem;
+    padding: 6rem 2rem 6rem;
     @include flex-center;
 
     @include gt-sm {
